--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -5,5 +5,6 @@
 
 .data-wrapper {
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
 }
